--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <link rel="stylesheet" href="/style/style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.2/react.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.2/JSXTransformer.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body style='background-color: whitesmoke'>
+  <body style='background-color: whitesmoke; font-family: "Times New Roman", Times, serif;'>
     <div class="container"></div>
-  </body>
+   </body>
   <script src="/bundle.js"></script>
+  <script src="./javascripts/index.js"></script>
+
 </html>
