--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body style='background-color: whitesmoke; font-family: helvetica;'>
+  <body style='background-color: whitesmoke; font-family: Avant Garde;'>
     <div class="container"></div>
    </body>
   <script src="/bundle.js"></script>
