--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    </body>
   <script src="/bundle.js"></script>
   <script src="./javascripts/jquery-1.12.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="./javascripts/index.js"></script>
 
 </html>
